# invoice

./: .env.template  .gitignore  Makefile  README.md  compose.yml  template.env
server/api/: Cargo.toml
server/api/data/: business.json
server/api/src/: main.rs  route.rs  service.rs
server/api/src/data/: business.json
server/api/src/middleware/: cors.rs  dev_key.rs  mod.rs
server/api/src/route/: business.rs  error.rs  mod.rs  router.rs
server/api/src/route/business/: create.rs  get.rs  list.rs  mod.rs
server/api/src/route/client/: create.rs  list.rs  mod.rs
server/api/src/route/invoice/: add_line_item.rs  create.rs  create_line_item.rs  delete_line_item.rs  (+7 more)
server/api/src/util/: mod.rs  response.rs  rocket.rs
server/repository/: Cargo.toml
server/repository/migrations/2024-07-25-225105_initial/: down.sql  up.sql
server/repository/src/: connection.rs  data.rs  lib.rs  model.rs  schema.rs  service.rs
server/repository/src/service/: add_line_item.rs  common.rs  create_business.rs  create_client.rs  create_invoice.rs  create_invoice_template.rs  create_line_item.rs  create_product.rs  create_service.rs  delete_invoice_template.rs  delete_line_item.rs  duplicate_invoice.rs  get_business.rs  get_invoice.rs  list_businesses.rs  list_clients.rs  list_invoice_template.rs  list_invoices.rs  list_products.rs  list_service.rs  mod.rs  mutate_draft_invoice.rs  mutate_line_item.rs  order_line_item.rs  sys_seed.rs
server/repository/src/utility/: client.rs  contact.rs  invoice.rs  line_item.rs  location.rs  mod.rs  serialization.rs  string.rs  temporal.rs
(+175 files in other folders)
