[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
repository = { path = "../repository" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
dotenvy = "0.15.7"
