[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dotenvy = "0.15.7"
